--- a/.gitignore
+++ b/.gitignore
@@ -104,9 +104,6 @@ dist
 .temp
 .cache
 
-# Docusaurus cache and generated files
-.docusaurus
-
 # Serverless directories
 .serverless/
 
@@ -128,3 +125,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Local Vercal folder
+.vercel
+
+# package
+package-lock.json
